--- a/server/static/css/master.css
+++ b/server/static/css/master.css
@@ -21,6 +21,7 @@ body{
   color: black;
   background-color: white;
   float: left;
+  float: right;
   line-height: 30px;
   vertical-align: center;
   text-align: center;
