--- a/server/static/css/master.css
+++ b/server/static/css/master.css
@@ -21,11 +21,11 @@ body{
   color: black;
   background-color: white;
   float: left;
-  float: right;
   line-height: 30px;
   vertical-align: center;
   text-align: center;
   border-left: 1px solid black;
+  border-right: 1px solid black;
   display: inline;
 }
 .menuLink{
