--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{ title }}</title>
+    <link rel="icon" href="{{ url_for('static',filename='logo/favicon.ico') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/master.css') }}">
     <script src="http://developers.kakao.com/sdk/js/kakao.min.js"></script>
   </head>
