--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -27,7 +27,7 @@
             <a href="community" class="menuLink">Community</a>
           </li>
           <li class="menuLogin">
-            <button style="border:0; outline: 0;" type="button" id="login_click" name="button"><img id="login_image" src="{{ url_for('static',filename="logo/kakao_login_medium_narrow.png") }}" alt=""></button>
+            <button type="button" id="login_click" name="button">Kakao Login</button>
             <script type="text/javascript">
               document.getElementById('login_click').onclick = function() {
                 Kakao.init('734a58ba8d1de6eb1485389492741493');
