--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -43,9 +43,8 @@
                   url: '/v2/user/me',
                   success: function(response) {
                     console.log(response)
-                    document.getElementById('login_image').setAttribute('src',response['kakao_account']['profile']['profile_image_url']);
-                    document.getElementById('login_image').setAttribute('width',60);
-                    document.getElementById('login_image').setAttribute('height',60);
+                    document.getElementById('login_click').innerText = String(response['properties']['nickname'])+" 님";
+                    document.getElementById('login_click').setAttribute('id','profile');
                   },
                   fail: function(error) {
                     console.log(error);
