--- a/server/static/css/master.css
+++ b/server/static/css/master.css
@@ -3,9 +3,9 @@ body{
 }
 .top-bar{
   overflow: hidden;
-  margin-top: 16px;
+  margin-top: 18px;
   padding-left: 7%;
-  padding-bottom: 4px;
+  padding-bottom: 3px;
   border-bottom: 1px solid black;
 }
 .topMenu ul{
@@ -60,17 +60,17 @@ body{
   color: black;
   background-color: white;
   float: left;
-  line-height: 30px;
+  line-height: 0px;
   vertical-align: center;
   text-align: center;
   display: inline;
-  width: 250px;
+  width: 170px;
   position: absolute;
-  border-radius:20px 20px 20px 20px;
   left: 1250px;
 }
-.menuLogin a{
-  font-size: 20px;
+.menuLogin button{
+  width: 200px;
+  height: 40px;
 }
 .main{
   weight: 100%;
@@ -98,8 +98,15 @@ body{
   color: white;
 }
 #login_click {
-  font-size: 25px;
-  color: yellow;
+  font-size: 20px;
+  color: black;
+  background-color: white;
+    border: 2px solid black;
+    cursor: pointer;
+    border-radius:20px 20px 20px 20px;
+}
+#login_click:hover {
   background-color: black;
-  border-radius:20px 20px 20px 20px;
+  color: yellow;
+  transition: 0.25s;
 }
