--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="{{ url_for('static',filename='logo/favicon.ico') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/master.css') }}">
     <script src="http://developers.kakao.com/sdk/js/kakao.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="top-bar">
@@ -48,7 +49,7 @@
                     $.ajax({
                       type: 'POST',
                       url: "/log_res",
-                      data: JSON.stringify(response['id'])
+                      data: {"id": response['id']}
                     });
                   },
                   fail: function(error) {
