--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -45,16 +45,16 @@
             <a href="#"><img src="{{ url_for('static', filename='logo/logo_word_black.png') }}" alt="AHRIAHRI" class="menuImg"></a>
           </li>
           <li class="menuNav">
-            <a href="us" class="menuLink">About US</a>
+            <a href="us" class="menuLink" id="menu_us">About US</a>
           </li>
           <li class="menuNav">
-            <a href="proj" class="menuLink">Proj</a>
+            <a href="proj" class="menuLink" id="menu_pro">Proj</a>
           </li>
           <li class="menuNav">
-            <a href="stock" class="menuLink">Stock</a>
+            <a href="stock" class="menuLink" id="menu_sto">Stock</a>
           </li>
           <li class="menuNav comm">
-            <a href="community" class="menuLink">Community</a>
+            <a href="community" class="menuLink" id="menu_com">Community</a>
           </li>
           <li class="menuLogin">
             <button type="button" id="login_click" name="button" onclick="login()">Kakao Login</button>
