--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -7,30 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/master.css') }}">
     <script src="http://developers.kakao.com/sdk/js/kakao.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
-    <script type="text/javascript">
-      function click_profile() {
-        getCookie("id");
-        location.href="/profile";
-      }
-      function setCookie(name, value, exp) {
-        var data = new Date();
-        data.setTime(data.getTime() + exp*60*60*1000);
-        document.cookie = name + "=" + value + ";expires=" + data.toUTCString() + ";path=/";
-      }
-      function getCookie(cookie_name) {
-        var x, y;
-        var val = document.cookie.split(';');
-
-        for (var i = 0; i < val.length; i++) {
-          x = val[i].substr(0, val[i].indexOf('='));
-          y = val[i].substr(val[i].indexOf('=') + 1);
-          x = x.replace(/^\s+|\s+$/g, ''); // 앞과 뒤의 공백 제거하기
-          if (x == cookie_name) {
-            return unescape(y); // unescape로 디코딩 후 값 리턴
-          }
-        }
-      }
-    </script>
+    <script src="{{ url_for('static',filename='js/func.js') }}"></script>
     <style>
       .main_intro{
         background-image: url("static/logo/아리아리.jpg");
