--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -21,16 +21,16 @@
           <li class="menuImage">
             <a href="#"><img src="{{ url_for('static', filename='logo/logo_word_black.png') }}" alt="AHRIAHRI" class="menuImg"></a>
           </li>
-          <li class="menuNav">
+          <li class="menuNav" id="Yang">
             <a href="us" class="menuLink" id="menu_us">About US</a>
           </li>
-          <li class="menuNav">
+          <li class="menuNav" id="Yang">
             <a href="proj" class="menuLink" id="menu_pro">Proj</a>
           </li>
-          <li class="menuNav">
+          <li class="menuNav" id="Yang">
             <a href="stock" class="menuLink" id="menu_sto">Stock</a>
           </li>
-          <li class="menuNav comm">
+          <li class="menuNav comm" id="Yang">
             <a href="community" class="menuLink" id="menu_com">Community</a>
           </li>
           <li class="menuLogin">
