--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -21,16 +21,16 @@
           <li class="menuImage">
             <a href="#"><img src="{{ url_for('static', filename='logo/logo_word_black.png') }}" alt="AHRIAHRI" class="menuImg"></a>
           </li>
-          <li class="menuNav" id="Yang">
+          <li class="menuNav" id="yang" onmouseover="menu_over_1()" onmouseout="menu_out_1()">
             <a href="us" class="menuLink" id="menu_us">About US</a>
           </li>
-          <li class="menuNav" id="Yang">
+          <li class="menuNav" id="tae" onmouseover="menu_over_2()" onmouseout="menu_out_2()">
             <a href="proj" class="menuLink" id="menu_pro">Proj</a>
           </li>
-          <li class="menuNav" id="Yang">
+          <li class="menuNav" id="bin" onmouseover="menu_over_3()" onmouseout="menu_out_3()">
             <a href="stock" class="menuLink" id="menu_sto">Stock</a>
           </li>
-          <li class="menuNav comm" id="Yang">
+          <li class="menuNav comm" id="byeong" onmouseover="menu_over_4()" onmouseout="menu_out_4()">
             <a href="community" class="menuLink" id="menu_com">Community</a>
           </li>
           <li class="menuLogin">
