--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -30,7 +30,7 @@
           <li class="menuNav" id="bin" onmouseover="menu_over_3()" onmouseout="menu_out_3()">
             <a href="stock" class="menuLink" id="menu_sto">Stock</a>
           </li>
-          <li class="menuNav comm" id="byeong" onmouseover="menu_over_4()" onmouseout="menu_out_4()">
+          <li class="menuNav comm" id="park" onmouseover="menu_over_4()" onmouseout="menu_out_4()">
             <a href="community" class="menuLink" id="menu_com">Community</a>
           </li>
           <li class="menuLogin">
