--- a/server/templates/profile.html
+++ b/server/templates/profile.html
@@ -30,7 +30,7 @@
           <li class="menuNav" id="bin" onmouseover="menu_over_3()" onmouseout="menu_out_3()">
             <a href="stock" class="menuLink" id="menu_sto">Stock</a>
           </li>
-          <li class="menuNav comm" id="park" onmouseover="menu_over_4()" onmouseout="menu_out_4()">
+          <li class="menuNav comm" id="byeong" onmouseover="menu_over_4()" onmouseout="menu_out_4()">
             <a href="community" class="menuLink" id="menu_com">Community</a>
           </li>
           <li class="menuLogin">
@@ -74,14 +74,9 @@
         </ul>
       </nav>
     </div>
-    <div class="main_intro">
-      <p class="main_intro_exp_1">기술과 사람으로</p>
-      <p>더나은 세상을 만드는</p>
-      <p>카카오입니다</p>
-    </div>
-    <div class="main_intro_1">
-      <p>대충 내용이 들어갈 부분</p>
-    </div>
+
+    <h1>당신의 유니버셜 아이디는 {{ num }} 입니다.<br>카카오톡 아리아리 봇을 사용하시려면 "등록 {{ num }}" 을 입력해 주세요.</h1>
+
     <script type="text/javascript">
       login_cont();
     </script>
