--- a/server/static/css/master.css
+++ b/server/static/css/master.css
@@ -93,11 +93,6 @@ body{
 .main_intro_exp_1{
   padding-top: 150px;
 }
-#menu_us {
-  position: relative;
-  display: inline-block;
+#yang {
+  
 }
-#menu_us:hover {
-  background-color:gray;
-}
-#menu_pro 
