--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -77,7 +77,7 @@
     <div class="main_intro">
       <p class="main_intro_exp_1">기술과 사람으로</p>
       <p>더 나은 세상을 만드는</p>
-      <p>박성혁입니다</p>
+      <p>아리아리입니다</p>
     </div>
     <div class="main_intro_1">
       <p>대충 내용이 들어갈 부분</p>
