--- a/server/static/css/master.css
+++ b/server/static/css/master.css
@@ -99,7 +99,7 @@ body{
 #hyeok:hover #menu_pro {
   color: blue;
 }
-#ba:hover #menu_sto {
+#bao:hover #menu_sto {
   color: blue;
 }
 #bo:hover #menu_com {
