--- a/server/templates/profile.html
+++ b/server/templates/profile.html
@@ -37,7 +37,7 @@
           <li class="menuNav" id="bin" onmouseover="menu_over_3()" onmouseout="menu_out_3()">
             <a href="stock" class="menuLink" id="menu_sto">Stock</a>
           </li>
-          <li class="menuNav comm" id="byeong" onmouseover="menu_over_4()" onmouseout="menu_out_4()">
+          <li class="menuNav comm" id="park" onmouseover="menu_over_4()" onmouseout="menu_out_4()">
             <a href="community" class="menuLink" id="menu_com">Community</a>
           </li>
           <li class="menuLogin">
@@ -85,6 +85,14 @@
     <button type="button" name="button" onclick="logout()">로그아웃</button>
 
     <h1>당신의 유니버셜 아이디는 {{ num }} 입니다.<br>카카오톡 아리아리 봇을 사용하시려면 "등록 {{ num }}" 을 입력해 주세요.</h1>
+
+    {% if is_le=="0" %}
+      <p>아리아리 연구회의 주식 시스템을 사용하기 위해서 버튼을 눌러주세요.</p>
+      <button type="button" name="button" onclick="regis_sys()">시스템을 이용하시겠습니까?</button>
+    {% else %}
+      <p>아리아리 연구회의 주식 시스템을 사용 중입니다.</p>
+      <p>잔액 : {{ balance }}</p>
+    {% endif %}
 
     <script type="text/javascript">
       login_cont();
