시스템 완성

--- a/server/templates/profile.html
+++ b/server/templates/profile.html
@@ -92,6 +92,7 @@
     {% else %}
       <p>아리아리 연구회의 주식 시스템을 사용 중입니다.</p>
       <p>잔액 : {{ balance }}</p>
+      <button type="button" name="button" onclick="quit();">시스템 탈퇴(주의! 계정 정보가 완전히 사라집니다.)</button>
     {% endif %}
 
     <script type="text/javascript">
